add front end for homepage

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,12 @@
-    </main> 
-    <footer>
-        <p>&copy; <%= new Date().getFullYear() %> Social Shit. All rights reserved.</p>
-    </footer>
+</main>
+<footer>
+    <p class="text-center">&copy; <%= new Date().getFullYear() %> Social Stuff. All rights reserved.</p>
+    <div style="display: flex; justify-content: space-between;">
+        <p>SYSTEM STATUS: ONLINE</p>
+        <p>VERSION 0.0.1</p>
+    </div>
+    </div>
+</footer>
 </body>
+
 </html>
