--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Game App</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <script src="/js/script.js" defer></script>
 </head>
-<body>
-    <header>
-        <h1>Important Social Game Express Webiste Application for the Purpose of Happiness</h1>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
+
+<body class="bg-terminal-blue-gray text-terminal-light-gray font-retro">
+    <header class="bg-terminal-accent p-4">
+        <nav class="flex justify-between items-center">
+            <h1>SOCIAL CIRCLE</h1>
+            <ul class="flex space-x-4 list-none m-0 p-0">
+                <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">HOME</a></li>
+                <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">PROFILE</a></li>
+                <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">LEADERBOARD</a></li>
+                <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">SETTINGS</a></li>
             </ul>
         </nav>
     </header>
