added login in header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,6 +18,7 @@
                 <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">PROFILE</a></li>
                 <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">LEADERBOARD</a></li>
                 <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">SETTINGS</a></li>
+                <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">LOGIN</a></li>
             </ul>
         </nav>
     </header>
