fixed some routes, login is default when opened

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -21,6 +21,10 @@
             <span>NO ACCOUNT?</span>
             <a href="/register">REGISTER HERE</a>
         </div>
+        <div class="register-link">
+            <span>DON'T WANT TO CREATE AN ACCOUNT?</span>
+            <a href="/home">PLAY AS GUEST</a>
+        </div>
     </div>
 </div>
 
