--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -2,6 +2,11 @@
 <div class="center-container">
     <div class="login-box">
         <h1>REGISTER</h1>
+
+        <div class="input-field">
+            <label for="username">EMAIL:</label>
+            <input type="text" id="email" name="email">
+        </div>
         
         <div class="input-field">
             <label for="username">USERNAME:</label>
@@ -18,7 +23,7 @@
         </div>
         <div class="register-link">
             <span>ALREADY HAVE AN ACCOUNT?</span>
-            <a href="/login">LOGIN HERE</a>
+            <a href="/">LOGIN HERE</a>
         </div>
     </div>
 </div>
@@ -28,7 +33,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 90vh; /* Using 90vh instead of 100vh to account for potential header space */
+    min-height: 90vh; 
     width: 100%;
     position: absolute;
     top: 50%;
