--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,11 +14,11 @@
         <nav class="flex justify-between items-center">
             <h1>SOCIAL CIRCLE</h1>
             <ul class="flex space-x-4 list-none m-0 p-0">
-                <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">HOME</a></li>
+                <li><a href="/home" class="text-terminal-light-gray no-underline hover:underline">HOME</a></li>
                 <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">PROFILE</a></li>
                 <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">LEADERBOARD</a></li>
                 <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">SETTINGS</a></li>
-                <li><a href="/login" class="text-terminal-light-gray no-underline hover:underline">LOGIN</a></li>
+                <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">LOGIN</a></li>
             </ul>
         </nav>
     </header>
