added session based login

--- a/views/pages/guesthome.ejs
+++ b/views/pages/guesthome.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/guestpartial') %>
     <div class="container mx-auto text-center mt-12">
         <h1 class="text-4xl font-bold text-terminal-green">MAXIMIZE SOCIAL HAPPINESS</h1>
         <div
