--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/loginpartial') %>
 <div class="center-container">
     <div class="login-box">
         <h1>REGISTER</h1>
