--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<%- include('../partials/loginpartial') %>
 <div class="center-container">
     <div class="login-box">
         <h1>LOGIN</h1>
@@ -30,7 +30,7 @@
             </div>
             <div class="register-link">
                 <span>DON'T WANT TO CREATE AN ACCOUNT?</span>
-                <a href="/home">PLAY AS GUEST</a>
+                <a href="/guesthome">PLAY AS GUEST</a>
             </div>
         </form>
     </div>
