--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,4 +1,7 @@
 <%- include('../partials/loginpartial') %>
+<div class="mt-12 text-center">
+    <h1 class="text-4xl font-bold text-terminal-green">HAPPINESS.exe</h1>
+</div>
 <div class="center-container">
     <div class="login-box">
         <h1>LOGIN</h1>
