--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,11 @@
 </main>
-<footer>
-    <p class="text-center">&copy; <%= new Date().getFullYear() %> Social Stuff. All rights reserved.</p>
-    <div style="display: flex; justify-content: space-between;">
-        <p>SYSTEM STATUS: ONLINE</p>
-        <p>VERSION 0.0.1</p>
-    </div>
+<footer class="bg-terminal-accent p-4 w-full">
+    <div class="flex justify-between items-center text-terminal-light-gray font-mono">
+        <p>&copy; <%= new Date().getFullYear() %> Social Stuff. All rights reserved.</p>
+        <div class="flex space-x-4">
+            <p>SYSTEM STATUS: <span class="text-terminal-green">ONLINE</span></p>
+            <p>VERSION 0.0.1</p>
+        </div>
     </div>
 </footer>
 </body>
