working on profile

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
             <ul class="flex space-x-4 list-none m-0 p-0">
                 <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">HOME</a></li>
                 <% if (locals.isLoggedIn) { %>
-                    <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">PROFILE</a></li>
+                    <li><a href="/profile" class="text-terminal-light-gray no-underline hover:underline">PROFILE</a></li>
                     <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">SETTINGS</a></li>
                     <li><a href="/" class="text-terminal-light-gray no-underline hover:underline">LEADERBOARD</a></li>
                     <li><a href="/logout" class="text-terminal-light-gray no-underline hover:underline">LOGOUT</a></li>
