--- a/views/pages/characters.ejs
+++ b/views/pages/characters.ejs
@@ -6,8 +6,9 @@
             <% characters.forEach(character=> { %>
                 <div class="bg-terminal-accent p-4 rounded-lg shadow-lg text-center">
                     <a href="/characters/<%= character.c_id %>">
-                        <img src="<%= character.image %>" alt="<%= character.name %>"
-                            class="w-full h-48 object-cover rounded-lg mb-4">
+                        <img src="/images/portraits/<%= character.image %>" alt="<%= character.name %>"
+                            class="w-full h-48 rounded-lg mb-4"
+                            style="object-fit: contain; image-rendering: pixelated;">
                         <h2 class="text-xl font-bold text-terminal-light-gray">
                             <%= character.name %>
                         </h2>
