--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,6 +3,10 @@
     <div class="flex justify-between items-center text-terminal-light-gray font-mono">
         <p>&copy; <%= new Date().getFullYear() %> Social Stuff. All rights reserved.</p>
         <div class="flex space-x-4">
+            <div class="flex items-center space-x-2">
+                <label for="horn-mode" class="text-terminal-light-gray font-mono">HORN MODE</label>
+                <input type="checkbox" id="horn-mode" class="toggle-checkbox">
+            </div>
             <p>SYSTEM STATUS: <span class="text-terminal-green">ONLINE</span></p>
             <p>VERSION 0.0.1</p>
         </div>
